# logtron

./: .coveragerc  .travis.yml  Makefile  README.md  pyproject.toml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml
docs/: 200.html  conf.py  index.html  index.rst
docs-src/: README.md  nuxt.config.js  package-lock.json  package.json
docs-src/assets/css/: content.scss
docs-src/assets/svg/: icon-hashtag.svg:Zone.Identifier
docs-src/content/: api-reference.md  configuration.md  getting-started.md
docs-src/layouts/: default.vue
docs-src/pages/: index.vue
docs-src/pages/content/: _slug.vue
docs/_nuxt/: 0b0a8b8.js  10b26b6.js  2466929.js  3698a96.js  5f12d7e.js  6b59494.js  a6dabc2.js  bc8b046.js  d1a7c4d.js  d715f33.js  d954692.js  e6f4fc1.js  manifest.3012ec5c.json  manifest.4798e937.json
docs/_nuxt/content/: db-06a8ebe7.json  db-2306cf7a.json  db-8f03f077.json  db-c422089a.json  db-d3b918a3.json  db-fcf1eddb.json
docs/_nuxt/static/1600572149/: payload.js
docs/_nuxt/static/1600572149/content/api-reference/: payload.js
docs/_nuxt/static/1600572857/: payload.js
docs/_nuxt/static/1600572857/content/configuration/: payload.js
docs/_nuxt/static/1600612907/: payload.js
docs/content/api-reference/: index.html
docs/content/configuration/: index.html
docs/content/getting-started/: index.html
logtron/: autodiscover.py
logtron/formatters/: json_formatter.py
logtron/handlers/: console.py
tests/: test_logtron.py  test_perf.py  test_util.py
tests/resources/: test.yaml
(+4 files in other folders)
