[tool.poetry]
name = "logtron"
version = "0.1.5"
description = "A simple logging library with JSON log formatting"
authors = ["Ilija Stevcev <ilija1@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/ilija1/logtron/"
keywords = ["Logging", "JSON"]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
pyyaml = "^5.3.1"
importlib-metadata = "^1.7.0"
tomlkit = "^0.7.0"
# docs
sphinx = {version = "^3.2.1", optional = true, python = ">=3.8.0"}
sphinx-autoapi = {version = "^1.4.0", optional = true, python = ">=3.8.0"}
sphinx-rtd-theme = {version = "^0.5.0", optional = true, python = ">=3.8.0"}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "^2.10.1"

[tool.poetry.extras]
sphinx = ["sphinx", "sphinx-autoapi", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
